--- a/FaceFeatureDetect.xcodeproj/xcshareddata/xcschemes/FaceFeatureDetect Debug.xcscheme
+++ b/FaceFeatureDetect.xcodeproj/xcshareddata/xcschemes/FaceFeatureDetect Debug.xcscheme
@@ -14,7 +14,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-               BuildableName = "allAddonsExample.app"
+               BuildableName = "FaceFeatureDetect.app"
                BlueprintName = "FaceFeatureDetect"
                ReferencedContainer = "container:FaceFeatureDetect.xcodeproj">
             </BuildableReference>
@@ -32,7 +32,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "allAddonsExample.app"
+            BuildableName = "FaceFeatureDetect.app"
             BlueprintName = "FaceFeatureDetect"
             ReferencedContainer = "container:FaceFeatureDetect.xcodeproj">
          </BuildableReference>
@@ -44,13 +44,14 @@
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       buildConfiguration = "Debug"
+      ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
       <BuildableProductRunnable>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "allAddonsExample.app"
+            BuildableName = "FaceFeatureDetect.app"
             BlueprintName = "FaceFeatureDetect"
             ReferencedContainer = "container:FaceFeatureDetect.xcodeproj">
          </BuildableReference>
@@ -68,7 +69,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "allAddonsExample.app"
+            BuildableName = "FaceFeatureDetect.app"
             BlueprintName = "FaceFeatureDetect"
             ReferencedContainer = "container:FaceFeatureDetect.xcodeproj">
          </BuildableReference>
